feat(api): Worker.capabilityNames — Set<String> replaces List<Capability>
Workers carry capability names for matching, not full Capability instances.
Every engine usage extracts names or does membership checks — schemas come
from the binding's CapabilityTarget. Set<String> eliminates redundant
Capability construction, enables O(1) contains(), and rejects duplicates.

Also includes WorkerFunction.None (from engine#586, previously published
as SNAPSHOT but not committed to source).

no-issue: driven by casehubio/engine#591

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>